# interview-ramp-2026

./: monorepo.md  rename-to.sh
.claude/: settings.local.json
javascript/: biome.json  package.json  tsconfig.json
javascript/bar/: index.ts  package.json  tsconfig.json
javascript/foo/: index.ts  package.json
python/: .gitignore  .pre-commit-config.yaml  AGENTS.md  main.py  pyproject.toml
python/pre-commit/: ban-function-imports  check-ignore-justifications  frontend-typescript  pytest  pytest-slow  rustfmt  test_scope.py  ty  ty-and-zuban  type-check  typescript
python/ramp/app/: pyproject.toml
python/ramp/app/src/ramp/: app.py  main.py
python/ramp/app/tests/: main_test.py
python/simplemind/app/: pyproject.toml
python/simplemind/app/src/app/: main.py
python/simplemind/app/src/simplemind/: main.py
python/simplemind/karpathy/src/karpathy/: microgpt.py
python/simplemind/microgpt/: pyproject.toml
python/simplemind/microgpt/src/simplemind/: microgpt.py
python/simplemind/microgpt/tests/: microgpt_test.py  ref_100_steps.txt
python/simplemind/reference/: pyproject.toml
python/simplemind/reference/src/karpathy/: microgpt.py
rust/: Cargo.toml
