[project]
name = "simplemind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "app",
    "karpathy",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.8",
    "ty>=0.0.26",
    "zuban>=0.6.2",
]

[tool.uv.workspace]
members = ["simplemind/*"]

[tool.uv.sources]
app = { workspace = true }
karpathy = { workspace = true }
