[project]
name = "ramp"
version = "0.1.0"
description = "Ramp preliminary coding exercise"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ramp-app",
    "stamina>=26.1.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.8",
    "ty>=0.0.26",
    "zuban>=0.6.2",
    "pytest>=8",
]

[tool.uv.workspace]
members = ["ramp/*"]

[tool.uv.sources]
ramp-app = { workspace = true }

[tool.pytest.ini_options]
addopts = "-m 'not slow and not ultra_slow'"
markers = [
    "slow: marks tests as slow (excluded by default, run with: pytest -m slow)",
    "ultra_slow: marks tests as very slow (excluded by default, run with: pytest -m ultra_slow)",
]

[tool.ty.src]
exclude = []

[tool.ty.environment]
extra-paths = [
    "ramp/app/src",
]

[tool.ty.rules]
# Promote default-ignore rules to error
division-by-zero = "error"
possibly-missing-attribute = "error"
possibly-missing-import = "error"
possibly-unresolved-reference = "error"
unsupported-dynamic-base = "error"

# Promote default-warn rules to error
ambiguous-protocol-member = "error"
deprecated = "error"
ignore-comment-unknown-rule = "error"
ineffective-final = "error"
invalid-enum-member-annotation = "error"
invalid-ignore-comment = "error"
invalid-legacy-positional-parameter = "error"
possibly-missing-implicit-call = "error"
possibly-missing-submodule = "error"
redundant-cast = "error"
redundant-final-classvar = "error"
undefined-reveal = "error"
unresolved-global = "error"
unsupported-base = "error"
unused-awaitable = "error"
unused-ignore-comment = "error"
unused-type-ignore-comment = "error"
useless-overload-body = "error"


[tool.ty.terminal]
error-on-warning = true

# Note: a root-level pyproject.toml symlink points here so that zuban's LSP
# server (which receives the repo root as its workspace from IntelliJ) can
# find this config.
[tool.mypy]
mypy_path = [
    "ramp/app/src",
]
files = [
    "ramp/app/src",
    "pre-commit",
]
strict = true
warn-unreachable = true
disallow-any-explicit = true
disallow-any-decorated = true
disallow-untyped-globals = true
disallow-redefinition = true
strict-bytes = true
no-implicit-optional = true
warn-no-return = true
show-error-codes = true
show-column-numbers = true
pretty = true
