[project]
name = "simplemind-microgpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Michael Bosworth", email = "michael.a.bosworth@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
simplemind-microgpt = "simplemind_microgpt:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"
