[project]
name = "simplemind-microgpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Michael Bosworth", email = "michael.a.bosworth@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8",
]
